--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,7 @@ dependencies {
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:2.1.0'
     implementation 'com.airbnb.android:lottie:2.2.5'
     implementation 'com.firebase:firebase-jobdispatcher:0.8.2'
+    implementation 'com.android.support:support-annotations:27.1.1'
     api "org.projectlombok:lombok:${lombokVersion}"
     kapt "org.projectlombok:lombok:${lombokVersion}"
     kapt "com.evernote:android-state-processor:${state_version}"
@@ -182,10 +183,10 @@ dependencies {
     testImplementation "org.assertj:assertj-core:${assertjVersion}"
     androidTestImplementation "com.android.support:support-annotations:${supportVersion}"
     androidTestImplementation "org.mockito:mockito-core:${mockitoVersion}"
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation "com.android.support.test.espresso:espresso-intents:${espresseVersion}"
-    androidTestImplementation "com.android.support.test.espresso:espresso-core:${espresseVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 }
 
